# embedded-deformation-js

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: index.html
docs/assets/: index.01a87c29.js  index.0d696fb0.js  index.134f81db.css  index.3826805e.js  index.b29960ba.css  simulator.03b61e17.wasm  simulator.051c250c.wasm  utils.a10d1552.wasm
scripts/: build.cjs
src/: App.svelte  app.css  main.js
src/cpp/: CMakeLists.txt  index.js  simulator.cpp  utils.cpp
src/cpp/docker/: Dockerfile  docker-compose.yml
src/utils/: index.js
